k3d-victoriametrics/prometheusalert/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheusalert
  name: prometheusalert
  namespace: monitor-system
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: prometheusalert
